--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "devDependencies": {
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "overrides": {
+  "vega": "^5.32.0",
+  "vega-functions": "^5.17.0"
   }
 }
